# Cross-Check

./: .gitignore  README.md  pyproject.toml
backend/: main.py  requirements.txt  supabase_client.py
backend/api/v1/: auth.py  integrations.py  organizations.py  profiles.py  routes.py
backend/core/: config.py  security.py
backend/schemas/: integrations.py  organizations.py  profiles.py
backend/services/: composio_client.py  integrations.py  organizations.py  profiles.py
backend/utils/: slug.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/raw_html/: login_page.html  login_page_below.html
frontend/raw_html/onboarding/: fifth.html  forth.html  onboarding_first.html  second.html  third.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/security/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/layout/: legal-page.tsx
frontend/src/components/ui/: brand-mark.tsx
frontend/src/config/: site.ts
frontend/src/features/auth/api/: google-auth.ts  signout.ts
frontend/src/features/auth/components/: auth-callback-page.tsx  auth-hash-handler.tsx  google-auth-button.tsx  login-page.tsx  pre-login-content.tsx  scroll-below-button.tsx  signout-button.tsx
frontend/src/features/checks/: types.ts
frontend/src/features/dashboard/: types.ts
frontend/src/lib/: api-client.ts  env.ts
frontend/src/types/: api.ts
skills/: CLEAN_CODE_GUIDE.md
(+15 files in other folders)
