[project]
name = "cross-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "composio>=0.13.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.10.0",
    "uvicorn>=0.46.0",
]
